# ppmf-research

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
benchmarks/: CMakeLists.txt  conanfile.txt
benchmarks/source/: random_benchmark.cpp  utils_benchmark.cpp
include/: cma.h  cmaes.h  cmaes_ew.h  cmaes_state.h  math.h  parameters.h  population.h  random.h  sigma_adaptation.h  solutions.h  types.h  utils.h
reference/: rmatrix.h
source/: cmaes_ew.cpp  parameters.cpp
tests/: main.cpp  math_test.cpp  parameters_test.cpp  utils_test.cpp
